--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <!-- 3D ХҮН -->
     <a-entity id="human"
               gltf-model="human.glb"
-              position="0 0.8 -1.5"  <!-- өндрийг камерын төвд тааруулсан -->
-              rotation="0 180 0"      <!-- камер руу харна -->
-              scale="1.5 1.5 1.5"    <!-- хүнийг томруулж камерын өндөртэй ойролцоо болгосон -->
+              position="0 0.8 -1.5"   <!-- өндрийг камерын төвд тааруулсан -->
+              rotation="0 -90 0"      <!-- камер руу харна -->
+              scale="1.5 1.5 1.5"     <!-- хүнийг томруулсан -->
               look-at="[camera]">
-
+      
       <!-- ДУУ -->
       <a-sound id="voice"
                src="voice.mp3"
@@ -39,33 +39,6 @@
     <a-camera position="0 1.6 0"></a-camera>
 
   </a-scene>
-
-  <script>
-    // Амны хөдөлгөөн хийх компонент
-    // ⚠️ Ажиллахын тулд GLB моделд “Mouth” morph target байх шаардлагатай
-    AFRAME.registerComponent('mouth-move', {
-      init: function () {
-        const el = this.el;
-        const sound = document.querySelector('#voice').components.sound;
-        el.addEventListener('model-loaded', () => {
-          const mesh = el.getObject3D('mesh');
-          if (mesh && mesh.morphTargetDictionary && mesh.morphTargetInfluences) {
-            setInterval(() => {
-              const volume = sound ? sound.sound.getVolume() : 0.5;
-              if(mesh.morphTargetDictionary['Mouth'] !== undefined){
-                mesh.morphTargetInfluences[mesh.morphTargetDictionary['Mouth']] = volume;
-              }
-            }, 50);
-          } else {
-            console.warn("Амны морф target олдсонгүй. Моделд morph target 'Mouth' байх ёстой.");
-          }
-        });
-      }
-    });
-
-    // Компонентыг human entity дээр нэмнэ
-    document.querySelector('#human').setAttribute('mouth-move', '');
-  </script>
 
 </body>
 </html>
