Ammmm index.html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!-- 3D ХҮН -->
     <a-entity id="human"
               gltf-model="human.glb"
-              position="0 0.8 -1.5"   <!-- өндрийг камерын төвд тааруулсан -->
-              rotation="0 -90 0"      <!-- камер руу харна -->
-              scale="1.5 1.5 1.5"     <!-- хүнийг томруулсан -->
+              position="0 0.8 -1.5"
+              rotation="0 -90 0"
+              scale="1.5 1.5 1.5"
               look-at="[camera]">
       
       <!-- ДУУ -->
