lasttttt index.html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <!-- ДУУ -->
       <a-sound id="voice"
                src="voice.mp3"
-               autoplay="true"
-               loop="true">
+               autoplay="false"
+               loop="false">
       </a-sound>
 
     </a-entity>
