--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AR Human Talk</title>
+  <title>AR Human Talk with Mouth Animation</title>
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-
   <!-- AR.js -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
-
 <body style="margin:0; overflow:hidden;">
+
   <!-- Товч дарахад дуу эхлүүлэх -->
-  <button id="playBtn" style="position: absolute; z-index: 999; top: 20px; left: 20px; padding: 10px 20px; font-size:16px;">
+  <button id="playBtn" style="position: absolute; top: 20px; left: 20px; z-index: 999; padding:10px 20px;">
     Яриулах
   </button>
-  
+
   <a-scene
     embedded
     arjs="sourceType: webcam; debugUIEnabled: false;"
@@ -26,16 +25,27 @@
     <a-entity id="human"
               gltf-model="human.glb"
               position="0 0.8 -1.5"
-              rotation="0 -90 0"
+              rotation="0 180 0"
               scale="1.5 1.5 1.5"
               look-at="[camera]">
-      
-      <!-- ДУУ -->
+
+      <!-- MP3 дуу -->
       <a-sound id="voice"
                src="voice.mp3"
                autoplay="false"
                loop="false">
       </a-sound>
+
+      <!-- Амны хөдөлгөөн animation -->
+      <a-animation id="mouthAnim"
+                   attribute="scale"
+                   to="1.5 1.6 1.5"
+                   direction="alternate"
+                   dur="200"
+                   repeat="indefinite"
+                   easing="ease-in-out"
+                   begin="playMouth">
+      </a-animation>
 
     </a-entity>
 
@@ -45,12 +55,22 @@
   </a-scene>
 
   <script>
-    // Товч дарахад дууг тоглуулах
-    document.getElementById('playBtn').addEventListener('click', function() {
-      const soundEntity = document.querySelector('#voice');
-      soundEntity.components.sound.playSound();
+    const playBtn = document.getElementById('playBtn');
+    const voice = document.querySelector('#voice');
+    const human = document.querySelector('#human');
+
+    playBtn.addEventListener('click', () => {
+      voice.components.sound.playSound();
+
+      // Амны animation эхлүүлэх
+      human.emit('playMouth');
+
+      // Дуу дууссаны дараа animation зогсоох
+      voice.components.sound.sound.onended = () => {
+        human.removeAttribute('animation'); // simplified зогсоох
+      };
     });
- </script>
+  </script>
 
 </body>
 </html>
