--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a-scene
     embedded
     arjs="sourceType: webcam; debugUIEnabled: false;"
-    vr-mode-ui="enabled:false">
+    vr-mode-ui="enabled:true">
 
     <!-- 3D ХҮН -->
     <a-entity id="human"
