hsxfsh index.html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
   <!-- Товч дарахад дуу эхлүүлэх -->
   <button id="playBtn" style="position: absolute; top: 20px; left: 20px; z-index: 999; padding:10px 20px;">
-    Яриулах
+    Start
   </button>
 
   <a-scene
     embedded
     arjs="sourceType: webcam; debugUIEnabled: false;"
-    vr-mode-ui="enabled:true">
+    vr-mode-ui="enabled:false">
 
     <!-- 3D ХҮН -->
     <a-entity id="human"
