--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
       playBtn.textContent = "▶ Start";
       isPlaying = false;
     };
+    <audio id="voiceAudio" src="voice.mp3" controls></audio>
+
   </script>
 
 </body>
