--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     audio.onended = () => {
       playBtn.textContent = "▶ Start";
-      isPlaying = false;
+      isPlaying = true;
     };
   </script>
 
